<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/logo_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>
    
    <TextView
        android:id="@+id/logoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logoText"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorLogoName"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logoImageView"/>

    <Button
        android:id="@+id/playButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/playText"
        android:background="@drawable/button_play_custom"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logoTitle"/>

    <Button
        android:id="@+id/buttonLoadGame"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/loadGameText"
        android:textColor="@color/colorButtonText"
        android:background="@drawable/button_custom"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="6dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/buttonMissions"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/missionsText"
        android:textColor="@color/colorButtonText"
        android:background="@drawable/button_custom"
        android:layout_marginBottom="6dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/buttonStore"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/storeText"
        android:textColor="@color/colorButtonText"
        android:background="@drawable/button_custom"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="6dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>